# python-consumer-structure

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/: main.py
src/clients/: prepayment_client.py  tag_client.py
src/consumer/: rabbitmq_consumer.py
src/service_layer/: process.py
tests/service_layer/: test_process.py
