[tool.poetry]
name = "python-rav"
version = "0.1.0"
description = ""
authors = ["Eryk Humberto Oliveira Alves <ealves@stone.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
pika = "^1.2.0"
pydantic = "^1.8.2"
mypy = "^0.910"
black = "^21.6b0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
